--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
-		"flowbite-svelte": "^0.44.4",
 		"highlight.js": "^11.8.0",
 		"postcss": "^8.4.27",
 		"prettier": "^2.8.0",
@@ -45,6 +44,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.3.1",
+		"express": "^4.18.2",
 		"saos": "^1.3.1",
 		"svelte-scrollto-element": "^0.7.0"
 	}
