--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
 			],
 			"$routes/*": [
 				"src/routes/*"
+			],
+			"$lib": [
+				"./src/lib"
+			],
+			"$lib/*": [
+				"/src/lib/*"
 			]
 		}
 	}
