--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,26 @@
-name: node_app
+name: build + publish
 
-on: # specify the build to trigger the automated ci/cd
-    push:
-        branches:
-            - "main"
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-    build:
-        name: Build Docker image
-        runs-on: ubuntu-latest # specify the build machine
-        steps:
-            - # checkout to the repository on the build machine
-                name: Checkout
-                uses: actions/checkout@v3
-            - # login to Docker Hub using the secrets provided
-                name: Login to Docker Hub
-                uses: docker/login-action@v2
-                with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
-            - # create a build kit builder instance
-                name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v2
-            - # build the container image and push it to Docker \
-                # Hub with the name rosykiey48.
-                name: Build and push
-                uses: docker/build-push-action@v4
-                with:
-                  context: .
-                  file: ./Dockerfile
-                  push: true
-                  tags: rosykiey48/csoftware:latest
-    deploy:
-        runs-on: ubuntu-latest
-        name: Continuous Deployment
-        needs: [build]
-        steps:
-            - # deploy into vps menggunakan ssh private key yang di dapat dari server
-                name: Deploy using ssh
-                uses: appleboy/ssh-action@master
-                with:
-                    host: ${{ secrets.SSH_HOST_BIZNETGIO }}
-                    username: ${{ secrets.SSH_USERNAME_BIZNETGIO }}
-                    key: ${{secrets.SSH_PRIVATEKEY_BIZNETGIO}}
-                    port: 22
-                    script: |
-                        docker stop testname;docker rm testname;docker pull rosykiey48/csoftware:latest;docker run -d --name testname -p 8081:8080 rosykiey48/csoftware:latest;[ -n "$(docker ps --filter "status=exited" --filter "status=dead" -q)" ]&& docker rm $(docker ps --filter "status=exited" --filter "status=dead" -q);[ -n "$(docker images -q --filter dangling=true -q --no-trunc)" ]&& docker rmi $(docker images --filter dangling=true -q --no-trunc)
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Publish Docker Image
+        uses: matootie/github-docker@v3.1.0
+        with:
+          accessToken: ${{ github.token }}
+          containerRegistry: true
+      - name: Deploy on CapRover
+        uses: caprover/deploy-from-github@v1.1.2
+        with:
+          server: https://brackets.id
+          app: 'app-erp'
+          token: '${{ secrets.APP_TOKEN }}'
+          image: 'ghcr.io/rosikiey/my-skeleton:latest'
