--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Deploy on CapRover
         uses: caprover/deploy-from-github@v1.1.2
         with:
-          server: https://brackets.id
-          app: 'testx'
-          token: '${{ secrets.APP_TOKEN }}'
+          server: '${{ secrets.SERVER_CAPTAIN }}'
+          app: '${{ secrets.NAME_CAPTAIN }}'
+          token: '${{ secrets.TOKEN_CAPTAIN }}'
           image: 'ghcr.io/rosikiey/my-skeleton:latest'
